--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "framer-motion": "^12.34.3",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
