--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
